# aigenguard

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  action.yml  pyproject.toml
.github/: RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml
.github/workflows/: agentbom-example.yml  aigenguard-example.yml  precision-corpus.yml
benchmarks/precision/: README.md
docs/: agent-risk-taxonomy.md  comparison.md  demo-workflow.md  github-action.md  launch.md  mcp-security-analysis.md  output-schema.json  policy.md  precision.md  release-checklist.md  report-guide.md  runbom.md  threat-model.md  troubleshooting.md
docs/images/: README.md
docs/templates/: release-notes.md
examples/: README.md
examples/customer-support-agent/: README.md  agent.py  aigenguard-policy.yaml
examples/mcp-risky-agent/: README.md  agent.py
examples/mcp-safe-agent/: README.md  agent.py
examples/policies/: advisory-agentbom.toml  advisory-aigenguard.toml  strict-agentbom.toml  strict-aigenguard.toml
examples/research-agent/: README.md
scripts/: precision_corpus.py
src/agentbom/: __init__.py  cli.py  cyclonedx.py  detectors.py  diff.py  github_summary.py  graph.py  hooks.py  html_report.py  local_guard.py  mcp.py  mermaid.py  policy.py  policy_onboarding.py  policy_paths.py  reachability.py  report.py  risk.py  runbom.py  sarif.py  scanner.py
src/aigenguard/: __init__.py  blocked_output.py  cli.py  cyclonedx.py  detectors.py  diff.py  github_summary.py  graph.py  html_report.py  local_guard.py  mcp.py  mermaid.py  policy.py  policy_onboarding.py  reachability.py  report.py  risk.py  runbom.py  sarif.py  scanner.py  terminal.py
tests/: test_cli.py  test_detectors.py  test_diff.py  test_docs.py  test_graph.py  test_local_guard.py  test_mcp_demos.py  test_mermaid.py  test_output_schema.py  test_policy.py  test_runbom.py  test_scanner.py  test_static_precision_corpus.py
tests/fixtures/precision/: cases.json
tests/fixtures/precision/bad/code_exec_agent/: README.md  agent.py
tests/fixtures/precision/bad/cross_output_secret_redaction/: .env  mcp.json
tests/fixtures/precision/bad/leaked_ai_key_value/: .env  README.md
tests/fixtures/precision/bad/mcp_filesystem_agent/: README.md
tests/fixtures/precision/bad/policy_gap_risky_capability/: README.md  agent.py
tests/fixtures/precision/bad/prompt_allows_shell_agent/: AGENTS.md
tests/fixtures/precision/bad/shell_exec_agent/: README.md  agent.py
tests/fixtures/precision/bad/unknown_mcp_server/: README.md  mcp.json
tests/fixtures/precision/good/config_names_only/: README.md  agent.yaml
tests/fixtures/precision/good/docs_only_mentions/: README.md
tests/fixtures/precision/good/env_example_names_only/: README.md  (+1 more)
(+14 files in other folders)
