[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agentbom"
version = "0.8.0"
description = "Offline AI agent bill of materials and attack surface scanner"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgentBOM contributors" }]
license = { text = "MIT" }
dependencies = []
keywords = ["ai", "agents", "security", "bom", "sast", "mcp", "sarif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/vlcak27/agentbom"
Issues = "https://github.com/vlcak27/agentbom/issues"
Repository = "https://github.com/vlcak27/agentbom"

[project.optional-dependencies]
dev = [
    "build>=1",
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
agentbom = "agentbom.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
