[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aigenguard"
version = "0.8.3"
description = "Local-first pre-commit policy guard for AI-agent repositories."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AigenGuard contributors" }]
license = { text = "MIT" }
dependencies = []
keywords = ["ai", "agents", "security", "pre-commit", "policy", "mcp", "sarif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/vlcak27/aigenguard"
Issues = "https://github.com/vlcak27/aigenguard/issues"
Repository = "https://github.com/vlcak27/aigenguard"

[project.optional-dependencies]
dev = [
    "build>=1",
    "pre-commit>=4",
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
aigenguard = "aigenguard.cli:main"
agentbom = "aigenguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
